hphp/hack/test/typecheck/reified_generics/is_as_deep_inference_check.php.exp
ERROR: File "is_as_deep_inference_check.php", line 16, characters 5-6:
Invalid argument (Typing[4110])
  File "is_as_deep_inference_check.php", line 7, characters 12-45:
  Expected `Reified<Reified<Reified<int>>>`
  File "is_as_deep_inference_check.php", line 11, characters 12-12:
  But got `I`
ERROR: File "is_as_deep_inference_check.php", line 16, characters 5-6:
Invalid argument (Typing[4110])
  File "is_as_deep_inference_check.php", line 7, characters 12-45:
  Expected `Reified<Reified<Reified<int>>>`
  File "is_as_deep_inference_check.php", line 12, characters 8-9:
  But got `(<expr#5> as I & <expr#5> as Reified<Reified<int>>)` from this "as" assertion
ERROR: File "is_as_deep_inference_check.php", line 16, characters 5-6:
Invalid argument (Typing[4110])
  File "is_as_deep_inference_check.php", line 8, characters 3-14:
  Expected `Reified<int>`
  File "is_as_deep_inference_check.php", line 13, characters 5-7:
  But got `int`
  File "is_as_deep_inference_check.php", line 13, characters 5-7:
  This type argument to `Reified` must match exactly (it is invariant)
ERROR: File "is_as_deep_inference_check.php", line 16, characters 5-6:
Invalid argument (Typing[4110])
  File "is_as_deep_inference_check.php", line 13, characters 5-7:
  Expected `int`
  File "is_as_deep_inference_check.php", line 8, characters 3-14:
  But got `Reified<int>`
  File "is_as_deep_inference_check.php", line 8, characters 3-14:
  This type argument to `Reified` must match exactly (it is invariant)
